# stream-to-file

./: .env  .gitignore  CMakeLists.txt  Dockerfile  README.md  compose.yml  main.cpp  main_client.cpp  main_server.cpp
app/: CMakeLists.txt  start.sh
app/client/: CMakeLists.txt
app/server/inc/: tcp_server.hpp
app/server/src/: tcp_server.cpp
client/: client.cpp  client.hpp  test.txt
client/inc/: client.hpp
client/src/: client.cpp
server/: CMakeLists.txt  server.cpp  server.hpp  tcp_connection.cpp  tcp_connection.hpp  tcp_server.cpp  tcp_server.hpp
server/inc/: tcp_connection.hpp
server/src/: server.cpp  tcp_connection.cpp
